refactor for text and add new logic